--- a/contents/docs/functions/ease/index.mdx
+++ b/contents/docs/functions/ease/index.mdx
@@ -10,7 +10,7 @@ description: Functions for easing animations and transitions.
 
 Linear easing.
 
-`linear(t: float) → float`
+<ApiSig name="linear" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -19,11 +19,11 @@ Linear easing.
 
 Quadratic easing.
 
-`in_quad(t: float) → float`
+<ApiSig name="in_quad" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_quad(t: float) → float`
+<ApiSig name="out_quad" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_quad(t: float) → float`
+<ApiSig name="in_out_quad" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -32,11 +32,11 @@ Quadratic easing.
 
 Cubic easing.
 
-`in_cubic(t: float) → float`
+<ApiSig name="in_cubic" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_cubic(t: float) → float`
+<ApiSig name="out_cubic" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_cubic(t: float) → float`
+<ApiSig name="in_out_cubic" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -45,11 +45,11 @@ Cubic easing.
 
 Quartic easing.
 
-`in_quart(t: float) → float`
+<ApiSig name="in_quart" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_quart(t: float) → float`
+<ApiSig name="out_quart" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_quart(t: float) → float`
+<ApiSig name="in_out_quart" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -58,11 +58,11 @@ Quartic easing.
 
 Quintic easing.
 
-`in_quint(t: float) → float`
+<ApiSig name="in_quint" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_quint(t: float) → float`
+<ApiSig name="out_quint" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_quint(t: float) → float`
+<ApiSig name="in_out_quint" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -71,11 +71,11 @@ Quintic easing.
 
 Sinusoidal easing.
 
-`in_sin(t: float) → float`
+<ApiSig name="in_sin" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_sin(t: float) → float`
+<ApiSig name="out_sin" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_sin(t: float) → float`
+<ApiSig name="in_out_sin" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -84,11 +84,11 @@ Sinusoidal easing.
 
 Circular easing.
 
-`in_circ(t: float) → float`
+<ApiSig name="in_circ" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_circ(t: float) → float`
+<ApiSig name="out_circ" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_circ(t: float) → float`
+<ApiSig name="in_out_circ" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -97,11 +97,11 @@ Circular easing.
 
 Exponential easing.
 
-`in_expo(t: float) → float`
+<ApiSig name="in_expo" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_expo(t: float) → float`
+<ApiSig name="out_expo" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_expo(t: float) → float`
+<ApiSig name="in_out_expo" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -110,11 +110,11 @@ Exponential easing.
 
 Elastic easing.
 
-`in_elastic(t: float) → float`
+<ApiSig name="in_elastic" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_elastic(t: float) → float`
+<ApiSig name="out_elastic" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_elastic(t: float) → float`
+<ApiSig name="in_out_elastic" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -123,11 +123,11 @@ Elastic easing.
 
 Back easing.
 
-`in_back(t: float) → float`
+<ApiSig name="in_back" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_back(t: float) → float`
+<ApiSig name="out_back" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_back(t: float) → float`
+<ApiSig name="in_out_back" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
 
@@ -136,10 +136,10 @@ Back easing.
 
 Bounce easing.
 
-`in_bounce(t: float) → float`
+<ApiSig name="in_bounce" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`out_bounce(t: float) → float`
+<ApiSig name="out_bounce" params={[{ name: "t", type: "float" }]} returns="float" />
 
-`in_out_bounce(t: float) → float`
+<ApiSig name="in_out_bounce" params={[{ name: "t", type: "float" }]} returns="float" />
 
 </div>
