--- a/contents/docs/functions/event/index.mdx
+++ b/contents/docs/functions/event/index.mdx
@@ -8,7 +8,7 @@ description: Functions for handling user input events.
 ## Poll
 <div className="api-card">
 
-`poll() → list[Event]`
+<ApiSig name="poll" returns="list[Event]" />
 
 Poll for all pending user input events.
 
