--- a/contents/docs/functions/key/index.mdx
+++ b/contents/docs/functions/key/index.mdx
@@ -8,7 +8,7 @@ description: Functions for interacting with keyboard inputs.
 ## Is Pressed
 <div className="api-card">
 
-`is_pressed(scancode: Scancode) → bool`
+<ApiSig name="is_pressed" params={[{ name: "scancode", type: "Scancode" }]} returns="bool" />
 
 Check if a key is currently being held down.
 
@@ -22,7 +22,7 @@ _**Returns**_
 
 ---
 
-`is_pressed(keycode: Keycode) → bool`
+<ApiSig name="is_pressed" params={[{ name: "keycode", type: "Keycode" }]} returns="bool" />
 
 Check if a key is currently being held down.
 
@@ -39,7 +39,7 @@ _**Returns**_
 ## Is Just Pressed
 <div className="api-card">
 
-`is_just_pressed(scancode: Scancode) → bool`
+<ApiSig name="is_just_pressed" params={[{ name: "scancode", type: "Scancode" }]} returns="bool" />
 
 Check if a key was just pressed.
 
@@ -53,7 +53,7 @@ _**Returns**_
 
 ---
 
-`is_just_pressed(keycode: Keycode) → bool`
+<ApiSig name="is_just_pressed" params={[{ name: "keycode", type: "Keycode" }]} returns="bool" />
 
 Check if a key was just pressed.
 
@@ -70,7 +70,7 @@ _**Returns**_
 ## Is Just Released
 <div className="api-card">
 
-`is_just_released(scancode: Scancode) → bool`
+<ApiSig name="is_just_released" params={[{ name: "scancode", type: "Scancode" }]} returns="bool" />
 
 Check if a key was just released.
 
@@ -84,7 +84,7 @@ _**Returns**_
 
 ---
 
-`is_just_released(keycode: Keycode) → bool`
+<ApiSig name="is_just_released" params={[{ name: "keycode", type: "Keycode" }]} returns="bool" />
 
 Check if a key was just released.
 
