--- a/contents/docs/functions/line/index.mdx
+++ b/contents/docs/functions/line/index.mdx
@@ -8,7 +8,7 @@ description: Functions for manipulating line objects.
 ## Move
 <div className="api-card">
     
-`move(line: Line, offset: Vec2) → Line`
+<ApiSig name="move" params={[{ name: "line", type: "Line" }, { name: "offset", type: "Vec2" }]} returns="Line" />
 
 Returns a new line translated by the given offset.
 
