--- a/contents/docs/functions/draw/index.mdx
+++ b/contents/docs/functions/draw/index.mdx
@@ -8,7 +8,7 @@ description: Functions for drawing shapes and primitives on a canvas.
 ## Point
 <div className="api-card">
 
-`point(point: Vec2, color: Color) → None`
+<ApiSig name="point" params={[{ name: "point", type: "Vec2" }, { name: "color", type: "Color" }]} returns="None" />
 
 Draws a point at the specified coordinates with the given color.
 
@@ -22,7 +22,7 @@ _**Parameters**_
 ## Points
 <div className="api-card">
 
-`points(points: Sequence[Vec2], color: Color) → None`
+<ApiSig name="points" params={[{ name: "points", type: "Sequence[Vec2]" }, { name: "color", type: "Color" }]} returns="None" />
 
 Batch draws multiple points at the specified coordinates with the given color.
 
@@ -36,7 +36,7 @@ _**Parameters**_
 ## Points From NDArray
 <div className="api-card">
 
-`points_from_ndarray(points: numpy.ndarray, color: Color) → None`
+<ApiSig name="points_from_ndarray" params={[{ name: "points", type: "numpy.ndarray" }, { name: "color", type: "Color" }]} returns="None" />
 
 Batch draws multiple points from a NumPy ndarray of coordinates with the given color.
 
@@ -50,7 +50,7 @@ _**Parameters**_
 ## Circle
 <div className="api-card">
 
-`circle(circle: Circle, color: Color, thickness = 0) → None`
+<ApiSig name="circle" params={[{ name: "circle", type: "Circle" }, { name: "color", type: "Color" }, { name: "thickness", type: "int", default: "0" }]} returns="None" />
 
 Draws a circle at the specified center with the given radius, color, and optional outline thickness.
 
@@ -65,7 +65,7 @@ _**Parameters**_
 ## Line
 <div className="api-card">
 
-`line(line: Line, color: Color, thickness = 1) → None`
+<ApiSig name="line" params={[{ name: "line", type: "Line" }, { name: "color", type: "Color" }, { name: "thickness", type: "int", default: "1" }]} returns="None" />
 
 Draws a line segment between two points with the given color and optional thickness.
 
@@ -80,7 +80,7 @@ _**Parameters**_
 ## Rect
 <div className="api-card">
 
-`rect(rect: Rect, color: Color, thickness = 0) → None`
+<ApiSig name="rect" params={[{ name: "rect", type: "Rect" }, { name: "color", type: "Color" }, { name: "thickness", type: "int", default: "0" }]} returns="None" />
 
 Draws a rectangle at the specified position with the given size, color, and optional outline thickness.
 
@@ -95,7 +95,7 @@ _**Parameters**_
 ## Rects
 <div className="api-card">
 
-`rects(rects: Sequence[Rect], color: Color, thickness = 0) → None`
+<ApiSig name="rects" params={[{ name: "rects", type: "Sequence[Rect]" }, { name: "color", type: "Color" }, { name: "thickness", type: "int", default: "0" }]} returns="None" />
 
 Batch draws multiple rectangles at the specified positions with the given sizes, color, and optional outline thickness.
 
@@ -110,7 +110,7 @@ _**Parameters**_
 ## Polygon
 <div className="api-card">
 
-`polygon(polygon: Polygon, color: Color, filled = false) → None`
+<ApiSig name="polygon" params={[{ name: "polygon", type: "Polygon" }, { name: "color", type: "Color" }, { name: "filled", type: "bool", default: "false" }]} returns="None" />
 
 Draws a polygon defined by a sequence of points with the given color and optional fill.
 
