--- a/contents/docs/functions/gamepad/index.mdx
+++ b/contents/docs/functions/gamepad/index.mdx
@@ -8,7 +8,7 @@ description: Functions for interacting with gamepad inputs.
 ## Is Pressed
 <div className="api-card">
 
-`is_pressed(button: GamepadButton, slot: int = 0) → bool`
+<ApiSig name="is_pressed" params={[{ name: "button", type: "GamepadButton" }, { name: "slot", type: "int", default: "0" }]} returns="bool" />
 
 Check if a gamepad button is currently being held down.
 
@@ -26,7 +26,7 @@ _**Returns**_
 ## Is Just Pressed
 <div className="api-card">
 
-`is_just_pressed(button: GamepadButton, slot: int = 0) → bool`
+<ApiSig name="is_just_pressed" params={[{ name: "button", type: "GamepadButton" }, { name: "slot", type: "int", default: "0" }]} returns="bool" />
 
 Check if a gamepad button was just pressed.
 
@@ -44,7 +44,7 @@ _**Returns**_
 ## Is Just Released
 <div className="api-card">
 
-`is_just_released(button: GamepadButton, slot: int = 0) → bool`
+<ApiSig name="is_just_released" params={[{ name: "button", type: "GamepadButton" }, { name: "slot", type: "int", default: "0" }]} returns="bool" />
 
 Check if a gamepad button was just released.
 
@@ -62,7 +62,7 @@ _**Returns**_
 ## Get Left Stick
 <div className="api-card">
 
-`get_left_stick(slot: int = 0) → Vec2`
+<ApiSig name="get_left_stick" params={[{ name: "slot", type: "int", default: "0" }]} returns="Vec2" />
 
 Get the left analog stick position.
 
@@ -79,7 +79,7 @@ _**Returns**_
 ## Get Right Stick
 <div className="api-card">
 
-`get_right_stick(slot: int = 0) → Vec2`
+<ApiSig name="get_right_stick" params={[{ name: "slot", type: "int", default: "0" }]} returns="Vec2" />
 
 Get the right analog stick position.
 
@@ -96,7 +96,7 @@ _**Returns**_
 ## Get Left Trigger
 <div className="api-card">
 
-`get_left_trigger(slot: int = 0) → float`
+<ApiSig name="get_left_trigger" params={[{ name: "slot", type: "int", default: "0" }]} returns="float" />
 
 Get the left trigger's current pressure value.
 
@@ -113,7 +113,7 @@ _**Returns**_
 ## Get Right Trigger
 <div className="api-card">
 
-`get_right_trigger(slot: int = 0) → float`
+<ApiSig name="get_right_trigger" params={[{ name: "slot", type: "int", default: "0" }]} returns="float" />
 
 Get the right trigger's current pressure value.
 
@@ -130,7 +130,7 @@ _**Returns**_
 ## Set Deadzone
 <div className="api-card">
 
-`set_deadzone(deadzone: float, slot: int = 0) → None`
+<ApiSig name="set_deadzone" params={[{ name: "deadzone", type: "float" }, { name: "slot", type: "int", default: "0" }]} returns="None" />
 
 Set the dead zone threshold for a gamepad's analog sticks.
 
@@ -144,7 +144,7 @@ _**Parameters**_
 ## Get Deadzone
 <div className="api-card">
 
-`get_deadzone(slot: int = 0) → float`
+<ApiSig name="get_deadzone" params={[{ name: "slot", type: "int", default: "0" }]} returns="float" />
 
 Get the dead zone threshold for a gamepad's analog sticks.
 
@@ -161,7 +161,7 @@ _**Returns**_
 ## Get Connected Slots
 <div className="api-card">
 
-`get_connected_slots() → list[int]`
+<ApiSig name="get_connected_slots" returns="list[int]" />
 
 Get a list of currently connected gamepad slots.
 
