--- a/contents/docs/functions/window/index.mdx
+++ b/contents/docs/functions/window/index.mdx
@@ -29,7 +29,7 @@ Check if the window is currently open.
 
 _**Returns**_
 
-- `bool` : True if the window is open, False otherwise.
+`bool` : True if the window is open, False otherwise.
 
 </div>
 
@@ -51,7 +51,7 @@ Get the current size of the window. If scaled, the size will be adjusted to fit 
 
 _**Returns**_
 
-- `Vec2` : The current size of the window.
+`Vec2` : The current size of the window.
 
 </div>
 
@@ -77,7 +77,7 @@ Check if the window is currently in fullscreen mode.
 
 _**Returns**_
 
-- `bool` : True if the window is in fullscreen mode, False otherwise.
+`bool` : True if the window is in fullscreen mode, False otherwise.
 
 </div>
 
@@ -103,7 +103,7 @@ Get the current title of the window.
 
 _**Returns**_
 
-- `str` : The current title of the window.
+`str` : The current title of the window.
 
 </div>
 
@@ -116,6 +116,6 @@ Get the scale of the window relative to the renderer resolution.
 
 _**Returns**_
 
-- `int` : The current scale factor of the window.
+`int` : The current scale factor of the window.
 
 </div>
